# again_and_again

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
again_and_again/: __init__.py
again_and_again/src/: __init__.py  git_wizard.py  gpu_wizard.py  hydra_wizard.py  log_wizard.py  mlflow_wizard.py  path_wizard.py
tests/: __init__.py  conftest.py  test_git_wizard.py  test_gpu_wizard.py  test_mlflow_wizard.py  test_path_wizard.py
